feat: support for micronaut v4